WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268357
[UnifiedPDF] Fix hit-testing when zoomed
https://bugs.webkit.org/show_bug.cgi?id=268357
Summary
[UnifiedPDF] Fix hit-testing when zoomed
Simon Fraser (smfr)
Reported
2024-01-29 21:03:18 PST
Hit-testing is broken when zoomed or shrunk.
Attachments
Patch
(5.30 KB, patch)
2024-01-29 21:05 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-29 21:03:34 PST
<
rdar://problem/121903219
>
Simon Fraser (smfr)
Comment 2
2024-01-29 21:03:48 PST
Will be blocked on
bug 268355
.
Simon Fraser (smfr)
Comment 3
2024-01-29 21:05:09 PST
Created
attachment 469614
[details]
Patch
Simon Fraser (smfr)
Comment 4
2024-01-29 22:22:10 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23493
EWS
Comment 5
2024-01-30 08:49:31 PST
Committed
273758@main
(eb3399bb2c9b): <
https://commits.webkit.org/273758@main
> Reviewed commits have been landed. Closing PR #23493 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug